fixed overflow of animation to nav bar, re-designed layout in abt page putting services on main page

--- a/app/globals.css
+++ b/app/globals.css
@@ -148,6 +148,15 @@
   background-color: #1d2435;
 }
 
+.textGray {
+  color: #a5a7ac;
+}
+
+
+
+
+
+
 /* 
 ---break--- */
 
